updated demo login details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="./assets/img/micro-bank-icon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/img/micro-bank-icon.png"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
@@ -71,8 +75,8 @@
           <div class="row text-center mt-5">
             <div class="col">
               <h2>Demo Login Details</h2>
-              <p class="lead">Demo 1) Username: js & Password: 1111</p>
-              <p class="lead">Demo 2) Username: jd & Password: 2222</p>
+              <p class="lead">Demo 1) Username: sl & Password: 1111</p>
+              <p class="lead">Demo 2) Username: as & Password: 2222</p>
               <p class="lead">Demo 3) Username: cb & Password: 3333</p>
             </div>
           </div>
