--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <h2>Demo Login Details</h2>
               <p class="lead">Demo 1) Username: sl & Password: 1111</p>
               <p class="lead">Demo 2) Username: as & Password: 2222</p>
-              <p class="lead">Demo 3) Username: cb & Password: 3333</p>
+              <p class="lead">Demo 3) Username: cm & Password: 3333</p>
             </div>
           </div>
         </div>
