--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Bankist</title>
+    <title>Micro Bank</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
