--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- TOP NAVIGATION -->
     <div
-      class="d-flex justify-content-center align-items-center app-container container-fluid vh-100"
+      class="d-flex justify-content-center align-items-center app-container container vh-100"
     >
       <!-- LOGIN SCREEN -->
       <div class="row w-75 login-screen">
@@ -114,7 +114,7 @@
           <div class="row">
             <div class="col">
               <div class="row">
-                <div class="col col-md-8 movements-table">
+                <div class="col col-sm-12 col-md-8 movements-table">
                   <!-- MOVEMENTS -->
                   <div class="movements">
                     <div class="movements__row">
@@ -135,7 +135,7 @@
 
                   <!-- SUMMARY -->
 
-                  <div class="row py-5 py-md-0 pt-md-2">
+                  <div class="row py-5 py-md-0 pt-md-4">
                     <div class="col">
                       <div class="row">
                         <div class="col summary">
@@ -154,14 +154,14 @@
                             0000€
                           </p>
                         </div>
-                        <div class="col summary">
+                        <div class="col summary pt-1 pt-md-2">
                           <button class="btn--sort">&downarrow; SORT</button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col col-md-4 actions">
+                <div class="col col-sm-12 col-md-4 actions">
                   <div class="row mb-4">
                     <div class="col">
                       <!-- OPERATION: TRANSFERS -->
@@ -229,7 +229,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="row">
+                  <div class="row pt-3">
                     <div class="col">
                       <!-- LOGOUT TIMER -->
                       <p class="logout-timer">
