--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="shortcut icon" type="image/png" href="./assets/img/micro-bank-icon.png" />
+  <link rel="shortcut icon" type="image/png" href="/assets/img/micro-bank-icon.png" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Micro Bank</title>
 </head>
 
 <body>
   <!-- TOP NAVIGATION -->
-  <div class="d-flex justify-content-center align-items-center app-container container vh-100">
+  <div class="d-flex justify-content-center align-items-center app-container container">
     <!-- LOGIN SCREEN -->
     <div class="row w-75 login-screen">
       <div class="col">
         <div class="row">
           <div class="col">
-            <img class="logo mx-auto d-block mb-5" src="./assets/img/micro-bank-logo.png" alt="logo" />
+            <img class="logo mx-auto d-block mb-5" src="/assets/img/micro-bank-logo.png" alt="logo" />
           </div>
         </div>
         <div class="row w-75 mx-auto login-box">
@@ -56,12 +56,12 @@
     </div>
 
     <!-- MAIN APP SCREEN  -->
-    <div class="row d-none app-screen p-3 p-md-5">
+    <div class="row d-none app-screen p-3 p-lg-5">
       <div class="col">
         <div class="row">
           <div class="col">
             <div class="d-flex flex-column mb-2">
-              <img class="logo mx-auto d-block mb-2" src="./assets/img/micro-bank-logo.png" alt="logo" />
+              <img class="logo mx-auto d-block mb-2" src="/assets/img/micro-bank-logo.png" alt="logo" />
               <div class="d-flex justify-content-center pt-5">
                 <h2 class="welcome">Welcome back, Sammy</h2>
                 <span class="logout">(Logout)</span>
@@ -196,7 +196,10 @@
     </div>
   </div>
 
-  <footer>&copy; <span>2022 All rights reserved</span></footer>
+  <footer>
+    &copy; <span>2022 All rights reserved</span> <br />
+    <span>A project by <a href="https://www.sammyleths.com" target="_blank" rel="noopener">SammyLeths</a></span>
+  </footer>
 
   <div class="err-modal hidden">
     <button class="close-modal">&times;</button>
@@ -210,7 +213,7 @@
 
   <div class="err-overlay hidden"></div>
 
-  <script src="script.js"></script>
+  <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
