added meta data in head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta property="og:image" content="https://mugshotbot.com/m/6xJFjGIG">
+  <meta property="twitter:card" content="summary_large_image">
   <link rel="shortcut icon" type="image/png" href="/assets/img/micro-bank-icon.png" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
